# stock-price-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt  template.yaml
.github/workflows/: ci.yml
src/: __init__.py
src/app/: __init__.py  api.py  cli.py  data_fetcher.py  lambda_handler.py
src/core/: __init__.py  config.py  logging.py  models.py  storage.py
src/data_sources/: __init__.py  yahoo_html.py  yahoo_yfinance.py
src/llm/: __init__.py  gemini_client.py  scraping_assistant.py
tests/: conftest.py  test_api.py  test_integration.py  test_models.py
